# Aster

./: .editorconfig  .gitignore  Aster.sln  Aster.slnx  CMakeLists.txt  README.md  config.h.cmake  mkdocs.yml  requirements.txt
Ahri/Aster/: __init__.py
Aster/: __init__.py
DirectX_learn/: CMakeLists.txt  main.cpp
audio/: read_audio.py
cmake/: library.cmake
docs/: Qt.md
imgui_learn/: CMakeLists.txt  main.cpp
include/: Aster.hpp  ffmpeg_utils.hpp
include/Ahri/: ffmpeg_utils.hpp  imgui_utils.hpp  opengl_utils.hpp  qt_utils.hpp
qt_learn/: CMakeLists.txt  main.cpp
qt_learn/python/: draw.py
qt_learn/src/: mainwindow.hpp
qt_learn/ui/: mainwindow.ui
src/: Aster.vcxproj  Aster.vcxproj.filters  CMakeLists.txt  camera.hpp  main.cpp
src/assets/: Aster.rc  mainwindow.qml  mainwindow.qrc  mainwindow.qss
src/i18n/: Aster_zh_CN.ts
src/include/: constants.hpp  version.hpp
src/src/: camera.cpp  camera.hpp  mainwindow.cpp  mainwindow.hpp  videoplayer.cpp  videoplayer.hpp
src/ui/: mainwindow.ui
